--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+.logo {
+  float: left;
+  width: 120px;
+  height: 31px;
+  margin: 16px 24px 16px 0;
+  background: rgba(255, 255, 255, 0.3);
+  text-align: center;
+  font-size: 24px;
+  color: white;
+  line-height: 31px;
+}
+
+.ant-upload.ant-upload-drag {
+  border: 2px dashed #1890ff;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+}
+
+.ant-upload.ant-upload-drag:hover {
+  border-color: #40a9ff;
+}
+
+.ant-upload-drag-icon {
+  color: #1890ff;
+}
+
+.ant-upload-text {
+  font-size: 16px;
+  color: #595959;
+}
+
+.ant-upload-hint {
+  font-size: 14px;
+  color: #8c8c8c;
+}
