--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+/* @media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
 .App {
   text-align: center;
 }
@@ -5,22 +11,12 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+} */
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  max-width: 1024px;
+  margin: 0 auto;
+  background-color: transparent;
   color: white;
 }
 
@@ -36,7 +32,29 @@
     transform: rotate(360deg);
   }
 }
-.logo {
+
+@keyframes breathing {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.3);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
+
+.breathing-icon {
+  animation: breathing 2s infinite;
+}
+
+.app__container{
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+/* .logo {
   float: left;
   width: 120px;
   height: 31px;
@@ -70,4 +88,4 @@
 .ant-upload-hint {
   font-size: 14px;
   color: #8c8c8c;
-}
+} */
